2009-03-05  David Hyatt  <hyatt@apple.com>

        Reviewed by Eric Seidel

        https://bugs.webkit.org/show_bug.cgi?id=24248

        Make sure painting of overflow controls checks that visibility:visible is set on the block before
        painting.  Pixel tests caught this regression.

        Make sure resizer painting pushes a clip of the corner rect.  It was relying on the clip layers happened
        to do to their bounds (which had nothing to do with overflow).

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::paint):
        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::paintResizer):

2009-03-05  Yong Li  <yong.li@torchmobile.com>

        Reviewed by Simon Fraser.

        https://bugs.webkit.org/show_bug.cgi?id=24386
        A faster implementation of extractMIMETypeFromMediaType.

        * platform/network/HTTPParsers.cpp:
        (WebCore::extractMIMETypeFromMediaType):

2009-03-05  Yong Li  <yong.li@torchmobile.com>

        Reviewed by Antti Koivisto.

        https://bugs.webkit.org/show_bug.cgi?id=24392
        Do not get the current time for unless we're doing PRELOAD_DEBUG as this
        can be unnecessarily expensive.

        * html/PreloadScanner.cpp:
        (WebCore::PreloadScanner::write):

2009-03-04  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=24327
        
        When mapping points and hit testing through transforms, work
        correctly when acclerated animations of transforms are running.
        
        Tested by LayoutTests/animations/animation-hit-test-transform.html,
        which only failed when ACCELERATED_COMPOSITING was turned on.

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::currentTransform):
        * rendering/RenderLayer.h:
        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::transformFromContainer):

2009-03-05  Mike Belshe  <mike@belshe.com>
